tests/errors/macro/parser_unexpected_elif.c
int a = 0;
#elif a = 1;

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
